<resources>
    <string name="app_name">Image Gallery</string>
    <string name="please_wait">Please wait</string>
    <string name="rotateImage">Rotate</string>
    <string name="flipImage">Flip</string>
    <string name="filterImage">Filter</string>
    <string name="cropImage">Crop</string>
    <string name="name">Name :</string>
    <string name="add_new_album">Add New Album</string>
    <string name="enter_new_album_name">Enter new album name</string>
    <string name="add_image_to_album">Add Image To Album</string>
    <string name="enter_album_name">Enter album name</string>
    <string name="enter_tag_name">Enter tag name</string>
    <string name="submit">Submit</string>
    <string name="detail_info">Detail Information</string>
    <string name="filename">File Name:</string>
    <string name="filepath">File Path:</string>
    <string name="location">Location :</string>
    <string name="last_updated">Last Updated:</string>
    <string name="tag">Tag :</string>
    <string name="albums">Albums</string>
    <string name="my_albums">My Albums</string>
    <string name="utilities">Utilities</string>
    <string name="select">Select</string>
    <string name="album_name">Album Name</string>
    <string name="example_number" translatable="false">1234</string>
    <string name="set_password">Set Password</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter password</string>
    <string name="retype">Retype:</string>
    <string name="retype_password">Retype password</string>
    <string name="forget_password">Forget password?</string>
    <string name="set_security_question">Set Security Question</string>
    <string name="security_question">Security Question:</string>
    <string name="answer">Answer:</string>
    <string name="enter_answer">Enter answer</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="set_lockscreen">Set lockscreen</string>
    <string name="share">Share</string>
    <string name="scan_qr">Scan QR</string>
    <string name="labeling">Labeling</string>
    <string name="add_to_album">Add to album</string>
    <string name="delete_from_trash">Delete from trash</string>
    <string name="information">Information</string>
    <string name="restore_trash">Restore (Trash)</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="remove_from_album">Remove from Album</string>
    <string name="backup">Back up</string>
    <string name="download_backup">Download backup</string>
    <string name="delete_duplicate_images">Delete duplicate images</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_location">Search by location</string>
    <string name="search_by_tag">Search by tag</string>
    <string name="select_all">Select All</string>
    <string name="restore">Restore</string>
    <string name="gallery">Gallery</string>
    <string name="image_unit_1">image</string>
    <string name="image_unit_n">images</string>
    <string name="album_name_exists">Album name already exist</string>
    <string name="album_name_empty">Album name cannot be empty</string>
    <string name="album_added">Album added</string>
    <string name="album_not_added">Album not added</string>
    <string name="what_is_your_favorite_color">What is your favorite color?</string>
    <string name="what_is_your_favorite_food">What is your favorite food?</string>
    <string name="what_is_your_favorite_movie">What is your favorite movie?</string>
    <string name="what_is_your_favorite_animal">What is your favorite animal?</string>
    <string name="what_is_your_favorite_sport">What is your favorite sport?</string>
    <string name="what_is_your_favorite_book">What is your favorite book?</string>
    <string name="what_is_your_favorite_song">What is your favorite song?</string>
    <string name="what_is_your_favorite_game">What is your favorite game?</string>
    <string name="what_is_your_favorite_tv_show">What is your favorite TV show?</string>
    <string name="what_is_your_favorite_subject">What is your favorite subject?</string>
    <string name="image_has_been_added_to">"Image has been added to "</string>
    <string name="image_already_exists_in_this_album">Image already exists in this album</string>
    <string name="album_name_cannot_be_empty">Album name cannot be empty</string>
    <string name="album_does_not_exist">Album does not exist</string>
    <string name="image_has_been_deleted_from">"Image has been deleted from "</string>
    <string name="image_does_not_exist_in_this_album">Image does not exist in this album</string>
    <string name="trash">Trash</string>
    <string name="favorites">Favorites</string>
    <string name="password_has_been_set">Password has been set</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="password_is_correct">Password is correct</string>
    <string name="answer_cannot_be_empty">Answer cannot be empty</string>
    <string name="security_question_has_been_set">Security question has been set</string>
    <string name="entered_wrong_answer_5_times">You have entered wrong answer 5 times. Please try again later</string>
    <string name="security_question_answer_is_incorrect">Security question answer is incorrect</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="album">Album</string>
    <string name="two_columns">Two columns</string>
    <string name="three_columns">Three columns</string>
    <string name="four_columns">Four columns</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="en_us">English - US</string>
    <string name="vie">Vietnamese</string>
    <string name="auto">Auto</string>
    <string name="add_tag">Add tag</string>
    <string name="remove_tag">Remove tag</string>
    <string name="delete_image_confirm">This photo will be deleted from gallery.</string>
    <string name="delete_images_confirm">These photos will be deleted from gallery.</string>
    <string name="delete_trash_confirm">This photo will be deleted permanently.</string>
    <string name="delete_trashes_confirm">These photos will be deleted permanently.</string>
    <string name="save_image_confirm">Do you want to save the edited image?</string>
    <string name="over_100_images">You can only select up to 100 images</string>
    <string name="enter_a_keyword">Enter a keyword</string>
    <string name="create_slide_show">Create slide show</string>
    <string name="delete_duplicate_done">Finished deleting duplicate images</string>
    <string name="delete_duplicate_error">Error when deleting duplicate images</string>
    <string name="images">images</string>
    <string name="backup_success">Backup successfully</string>
    <string name="backup_fail">Backup failed</string>
    <string name="download_successful">Download successfully</string>
    <string name="no_image_selected">No image selected</string>
    <string name="clear_password">Clear password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="reset_password">Reset password</string>
    <string name="edit_album_name">Edit Album Name</string>
    <string name="extract_text">Extract Text</string>
</resources>