<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/set_wallpaper"
        android:title="@string/set_wallpaper" />
    <item
        android:id="@+id/set_lockscreen"
        android:title="@string/set_lockscreen" />
    <item
        android:id="@+id/share"
        android:title="@string/share" />
    <item android:id="@+id/qrscan"
        android:title="@string/scan_qr" />
    <item
        android:id="@+id/labeling"
        android:title="@string/labeling" />
    <item
        android:id="@+id/add_to_album"
        android:title="@string/add_to_album" />

    <item android:id="@+id/delete_image"
        android:title="@string/delete" />

    <item android:id="@+id/delete_trash"
        android:title="@string/delete_from_trash" />
    <item android:id="@+id/info_image"
        android:title="@string/information" />

    <item android:id="@+id/restore_image"
        android:title="@string/restore_trash" />

</menu>