<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        android:textSize="24dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/enter_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:width="70dp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="150dp"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/retype_password_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:width="70dp"
            android:text="@string/retype"/>
        <EditText
            android:id="@+id/retype_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/retype_password"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_password"
        android:text="@string/forget_password"
        android:layout_marginTop="10dp"
        android:textColor="@color/appColorAccent"
        android:textStyle="italic"
        android:textSize="18sp"
        />

</LinearLayout>